--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "node --import tsx prisma/seed.ts",
     "templates:import:custom": "node --import tsx scripts/import-activity-templates-custom-json.ts",
-    "residents:import:custom": "node --import tsx scripts/import-residents-custom-json.ts"
+    "residents:import:custom": "node --import tsx scripts/import-residents-custom-json.ts",
+    "residents:import:jason": "node --import tsx scripts/importResidentsJasonAddington.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.15.3",
