--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "templates:import:custom": "node --import tsx scripts/import-activity-templates-custom-json.ts",
     "templates:import:text-pack": "node --import tsx scripts/import-activity-templates-from-text-pack.ts",
     "residents:import:custom": "node --import tsx scripts/import-residents-custom-json.ts",
-    "residents:import:jason": "node --import tsx scripts/importResidentsJasonAddington.ts"
+    "residents:import:jason": "node --import tsx scripts/importResidentsJasonAddington.ts",
+    "calendar:import:feb-2026": "node --import tsx scripts/import-calendar-feb-2026.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.15.3",
