--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "templates:import:text-pack": "node --import tsx scripts/import-activity-templates-from-text-pack.ts",
     "residents:import:custom": "node --import tsx scripts/import-residents-custom-json.ts",
     "residents:import:jason": "node --import tsx scripts/importResidentsJasonAddington.ts",
-    "calendar:import:feb-2026": "node --import tsx scripts/import-calendar-feb-2026.ts"
+    "import:1to1:jason": "node --import tsx scripts/importOneOnOneNotesJasonAddington.ts",
+    "calendar:import:feb-2026": "node --import tsx scripts/import-calendar-feb-2026.ts",
+    "test:calendar": "node --import tsx --test lib/calendar/__tests__/calendar-logic.test.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.15.3",
