--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "recharts": "^2.15.1",
     "stripe": "^17.6.0",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^16.1.6",
